WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
281281
[CURL] Network sessions are not destroyed in platformFinalize
https://bugs.webkit.org/show_bug.cgi?id=281281
Summary
[CURL] Network sessions are not destroyed in platformFinalize
Przemyslaw Gorszkowski
Reported
2024-10-10 23:16:06 PDT
It is the same implementation of the fix as it was done for SOUP in
https://bugs.webkit.org/show_bug.cgi?id=281143
but for CURL.
Attachments
Add attachment
proposed patch, testcase, etc.
Przemyslaw Gorszkowski
Comment 1
2024-10-10 23:56:38 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/35027
EWS
Comment 2
2024-10-14 22:55:57 PDT
Committed
285180@main
(63fd6df14912): <
https://commits.webkit.org/285180@main
> Reviewed commits have been landed. Closing PR #35027 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2024-10-14 22:56:13 PDT
<
rdar://problem/137936839
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug